<?xml version="1.0"?>
<package>
    <name>stikklar_arbotix_driver</name>
    <version>0.1.0</version>
    <description>Wraps the config of Stikklar robot for the arbotix_driver</description>

    <maintainer email="freyr.magnusson@gmail.com">Freyr Magnusson</maintainer>
    <license>BSD</license>
    <url type="repository">https://github.com/freyzor/stikklar_arbotix_driver</url>
    <author email="freyr.magnusson@gmail.com">Freyr Magnusson</author>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>arbotix</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <run_depend>arbotix</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>
    <export>
    </export>
</package>